--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Hệ Sinh Thái - Khám Phá Và Bảo Vệ</title>
     <meta name="description" content="Trang web giáo dục về hệ sinh thái, tác động môi trường và cách bảo vệ.">
     <!-- Bootstrap CSS -->
-    <link href="" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body { font-family: 'Roboto', sans-serif; background-color: #f8f9fa; }
         .hero { background: linear-gradient(to right, #4CAF50, #2196F3); color: white; padding: 100px 0; }
@@ -16,6 +16,7 @@
     </style>
 </head>
 <body>
+
     <nav class="navbar navbar-expand-lg navbar-dark bg-success">
         <div class="container">
             <a class="navbar-brand" href="#">Hệ Sinh Thái</a>
@@ -53,7 +54,7 @@
                 </div>
             </div>
             <div class="carousel-item">
-                <img src="ảnh 1.jpg" class="d-block w-100" alt="Đại dương">
+                <img src="ảnh 1.'" class="d-block w-100" alt="Đại dương">
                 <div class="carousel-caption d-none d-md-block">
                     <h5>Đại Dương</h5>
                     <p>Ngôi nhà của 80% sự sống trên hành tinh.</p>
@@ -123,7 +124,6 @@
             </div>
         </div>
     </section>
-
     <section id="conservation" class="py-5">
         <div class="container text-center">
             <h2>Cách Bảo Vệ Hệ Sinh Thái</h2>
@@ -136,6 +136,7 @@
             <a href="#contact" class="btn btn-success btn-lg">Tham Gia Ngay</a>
         </div>
     </section>
+
     <section id="blog" class="bg-light py-5">
         <div class="container">
             <h2 class="text-center mb-4">Blog & Tin Tức</h2>
@@ -175,7 +176,6 @@
         </div>
     </section>
 
-   
     <footer>
         <div class="container text-center">
             <p>&copy; 2023 Hệ Sinh Thái. Tất cả quyền được bảo lưu. | Theo dõi chúng tôi trên <a href="#" class="text-light">Facebook</a> | <a href="#" class="text-light">Twitter</a></p>
